update service files to ensure they are available after BentoML updates, fix some typos and make it fit for sharing. Update the main service file to comply with the BentoML API last updates, delete unused files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-/model
-/xx_sent_ud_sm-3.2.0
+/model/*
+/xx_sent_ud_sm-3.2.0/*
 /__pycache__
+*.zip
+*/__pycache__
+*/java-senten-dataset-long-spacy.pkl
